osprey_worker/src/osprey/engine/executor/tests/test_literals/test_export_fails_on_non_literal.txt
error: expected `Literal` or `FormatString`, got `BinaryOperation`
--> main.sml:4:27
     |
   4 | Foo: ExtractLiteral[int] = IntA + IntB
     |                            ^ `ExtractLiteral` assignment expects an rvalue of type `Union[Literal, FormatString]`
